# EliasChaosFractal-Generic

./: Cargo.toml  Grok.md  LICENSE  OpenLetter.md  README.md  Rust_110325.md  config.json  deploy.sh  markdown.md
docs/: NewtonChaos.md
src/: gossip_node.rs  lib.rs
src/core/: dialogue_frame.rs  elias_nlp_interface.rs  emotional_state_model.rs  ring_buffer.rs  self_evolving_fractal_gossip_node.rs  self_model.rs
src/evolution/: adaptive_topology.rs  cosmic_architectural_evolution.rs
src/network/: cosmic_gossip_protocol.rs  network_metrics.rs  peer_discovery.rs
src/quantum/: cosmic_entropy.rs  quantum_fractal_tensor_engine.rs
src/rendering/: cross_modal_cosmic_engine.rs  fractal_sonification.rs  fractal_visualization.rs
src/storage/: redis_interface.rs  state_manager.rs
src/utils/: consciousness_experiment.rs
tests/: cross_modal_tests.rs  emotional_model_tests.rs  gossip_protocol_tests.rs  node_tests.rs  resilience_tests.rs  self_model_tests.rs  sonification_tests.rs  tensor_engine_tests.rs
